[package]
name = "dipc-wasm"
version = "0.1.0"
edition = "2021"
description = "Convert your favorite images and wallpapers with your favorite color palettes/themes"
authors = ["doprz"]
homepage = "https://github.com/doprz/dipc"
repository = "https://github.com/doprz/dipc"
license = "MIT OR Apache-2.0"
keywords = ["cli", "graphics", "utility", "image", "tool"]
categories = ["command-line-interface", "command-line-utilities", "graphics", "multimedia::images", "rendering"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
wee_alloc = "0.4.5"
base64 = "0.13.0"
image = "0.24.7"
deltae = "0.3"
lab = "0.11"